[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brother_ql_web"
version = "1.0.0"
description = "A dockerized Python web service to print labels on Brother QL label printers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "DL6ER", email = "mail@example.com"}
]
keywords = [
    "brother",
    "label",
    "printer",
    "ql",
    "web",
    "flask"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Printing",
]

dependencies = [
    "attrs",
    "blinker",
    "brother_ql-inventree",
    "click",
    "dominate",
    "Flask",
    "iniconfig",
    "itsdangerous",
    "Jinja2",
    "MarkupSafe",
    "packaging",
    "packbits",
    "pdf2image",
    "Pillow",
    "pluggy",
    "Pygments",
    "python-barcode",
    "pyusb",
    "fonttools",
    "qrcode",
    "visitor",
    "Werkzeug",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
prod = [
    "gunicorn>=21.0.0",
]

[project.urls]
Homepage = "https://github.com/DL6ER/brother_ql_web"
Repository = "https://github.com/DL6ER/brother_ql_web.git"
Documentation = "https://github.com/DL6ER/brother_ql_web"
Issues = "https://github.com/DL6ER/brother_ql_web/issues"

[project.scripts]
brother_ql_web = "run:main"
brother_ql_web_gunicorn = "wsgi:app"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = [
    "templates/**/*.html",
    "static/**/*.css",
    "static/**/*.js",
    "static/**/*.xml",
    "static/**/*.json",
    "static/**/*.woff",
    "static/**/*.woff2",
    "static/**/*.ttf",
    "static/**/*.eot",
    "static/**/*.svg",
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["app"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
